2004-06-22    <jpr@novell.com>

	* gui/dialogs/recurrence-page.glade: fix mnemonics

	* gui/dialogs/event-page.glade: ditto

2004-06-22  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/comp-editor.c: kill warnings

2004-06-22  JP Rosevear  <jpr@novell.com>

	* gui/calendar-component.c (create_new_event): kill warning

2004-06-22  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/Makefile.am: removed alarm-page.*.

2004-06-22  JP Rosevear  <jpr@novell.com>

	 * gui/dialogs/Makefile.am, gui/dialogs/alarm-dialog.c,
	 gui/dialogs/alarm-dialog.glade, gui/dialogs/alarm-dialog.h,
	 gui/dialogs/alarm-list-dialog.c,
	 gui/dialogs/alarm-list-dialog.glade,
	 gui/dialogs/alarm-list-dialog.h, gui/dialogs/alarm-options.c,
	 gui/dialogs/alarm-options.h, gui/dialogs/alarm-page.c,
	 gui/dialogs/alarm-page.glade, gui/dialogs/alarm-page.h,
	 gui/dialogs/comp-editor.c, gui/dialogs/comp-editor.h,
	 gui/dialogs/event-editor.c, gui/dialogs/event-page.c,
	 gui/dialogs/event-page.glade, gui/dialogs/meeting-page.c,
	 gui/dialogs/meeting-page.glade, gui/dialogs/recurrence-page.c,
	 gui/dialogs/recurrence-page.glade,
	 gui/dialogs/task-details-page.c,
	 gui/dialogs/task-details-page.glade, gui/dialogs/task-editor.c,
	 gui/dialogs/task-page.c, gui/dialogs/task-page.glade: HIGify and
	 newer design; alarm page is gone, Cancel/OK buttons for the
	 dialog, no more menus; slightly improve read-only workings for
	 entry areas
	
2004-06-22  JP Rosevear  <jpr@novell.com>

	* gui/e-meeting-time-sel.c (e_meeting_time_selector_construct):
	rename widgets to be consistent with those else where
	(e_meeting_time_selector_set_read_only): cast properly
	(e_meeting_time_selector_on_invite_others_button_expose): remove,
	the widget sensitization is taken care of elsewhere

2004-06-22  Larry Ewing  <lewing@ximian.com>

	Fixes #59824
	
	* gui/e-week-view.h: increase some of the passing so that the text
	does not appear to run together.  Ideally this would be based on
	the font size but this will work for now.
